// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreTree renders 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div />
          <div
            class="card"
          >
            <div
              class="card"
            >
              <div
                class="list-group list-group-flush"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div
            class="tableHead nav nav-pills"
          >
            <div
              class="tableHead__leftContentWrapper"
            >
              <div
                class="nav-item dropdown"
                style="padding-left: 1em;"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  id="nav-dropdown"
                  role="button"
                  tabindex="0"
                >
                  main
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 16l-4-4V8.82C14.16 8.4 15 7.3 15 6c0-1.66-1.34-3-3-3S9 4.34 9 6c0 1.3.84 2.4 2 2.82V12l-4 4H3v5h5v-3.05l4-4.2 4 4.2V21h5v-5h-4z"
                    />
                  </svg>
                  3
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="#"
                  role="button"
                  tabindex="0"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21.41 11.58l-9-9C12.05 2.22 11.55 2 11 2H4c-1.1 0-2 .9-2 2v7c0 .55.22 1.05.59 1.42l9 9c.36.36.86.58 1.41.58.55 0 1.05-.22 1.41-.59l7-7c.37-.36.59-.86.59-1.41 0-.55-.23-1.06-.59-1.42zM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7z"
                    />
                  </svg>
                  2
                </a>
              </div>
            </div>
            <div
              class="tableHead__rightContentWrapper nav-item"
            >
              <a
                class="nav-link"
                href="/commits/main/"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                  />
                </svg>
                Commit History
              </a>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card"
            >
              <div
                class="list-group list-group-flush"
              >
                <div
                  class="list-group-item"
                >
                  <a
                    href="/tree/main/a"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                      />
                    </svg>
                    a
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders commit 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div />
          <div
            class="commitLog card"
          >
            <div
              class="EmptyView card-header"
            >
              <span
                class="EmptyView__message"
              >
                Nothing to show
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders commit message 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div />
          <div
            class="commitLog card"
          >
            <div
              class="EmptyView card-header"
            >
              <span
                class="EmptyView__message"
              >
                Nothing to show
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders commit message 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div
            class="tableHead nav nav-pills"
          >
            <div
              class="tableHead__leftContentWrapper"
            >
              <div
                class="nav-item dropdown"
                style="padding-left: 1em;"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  id="nav-dropdown"
                  role="button"
                  tabindex="0"
                >
                  main
                </a>
              </div>
              <div
                class="nav-link nav-item"
              >
                <a
                  href="/tree/main/"
                >
                  nessie
                </a>
                <span
                  style="padding-left: 0.5em; padding-right: 0.5em;"
                >
                  /
                </span>
                <a
                  href="/commits/main/"
                >
                  commits
                </a>
                <span
                  style="padding-left: 0.5em; padding-right: 0.5em;"
                >
                  /
                </span>
                <a
                  href="/commits/main/deadbeef"
                >
                  deadbeef
                </a>
              </div>
            </div>
          </div>
          <div
            class="commitLog card"
          >
            <div
              class="commitDetails card-body"
            >
              <div
                class="card-header"
              >
                <div
                  class="card-title h5"
                >
                  commitMessage
                </div>
                <p
                  class="ml-3 card-text"
                >
                  <span
                    class="ml-2"
                  >
                    Authored by: 
                  </span>
                  <span
                    class="ml-2"
                  >
                    bob
                  </span>
                  <span
                    class="ml-2"
                  >
                    at
                  </span>
                  <span
                    class="ml-2"
                  >
                    a few seconds ago
                  </span>
                </p>
                <p
                  class="ml-3 card-text"
                >
                  <span
                    class="ml-2"
                  >
                    Committed by: 
                  </span>
                  <span
                    class="ml-2"
                  >
                    sally
                  </span>
                  <span
                    class="ml-2"
                  >
                    at
                  </span>
                  <span
                    class="ml-2"
                  >
                    a day ago
                  </span>
                </p>
                <div
                  class="ml-3"
                >
                  <span
                    class="ml-2"
                  >
                    Properties: 
                  </span>
                  <ul>
                    <li
                      class="ml-4"
                    >
                      a: b
                    </li>
                    <li
                      class="ml-4"
                    >
                      c: d
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="commitDetails__branchFooter card-footer"
              >
                <img
                  alt="branchIcon"
                  class="mr-2"
                  height="22"
                  src="/branchIcon.svg"
                  width="22"
                />
                <div
                  class="card-title h5"
                >
                  main
                </div>
              </div>
              <div
                class="commitDetails__authorFooter card-footer"
              >
                <div>
                  <span
                    class="commitDetails__authorName mr-1"
                  >
                    bob
                  </span>
                  <span>
                    committed on a day ago
                  </span>
                </div>
                <span>
                  commit deadbeef
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders with slug 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div />
          <div
            class="card"
          >
            <div
              class="card"
            >
              <div
                class="list-group list-group-flush"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExploreTree renders with slug 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt=""
          class="d-inline-block align-top"
          height="30"
          src="/logo.svg"
          width="30"
        />
         Nessie
      </a>
      <div
        class="mr-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Tables
        </a>
      </div>
    </nav>
    <div>
      <div
        class="explore container"
      >
        <div
          class="explore__wrapper card"
        >
          <div
            class="tableHead nav nav-pills"
          >
            <div
              class="tableHead__leftContentWrapper"
            >
              <div
                class="nav-item dropdown"
                style="padding-left: 1em;"
              >
                <a
                  aria-expanded="false"
                  class="dropdown-toggle nav-link"
                  href="#"
                  id="nav-dropdown"
                  role="button"
                  tabindex="0"
                >
                  main
                </a>
              </div>
              <div
                class="nav-link nav-item"
              >
                <a
                  href="/tree/main/"
                >
                  nessie
                </a>
                <span
                  style="padding-left: 0.5em; padding-right: 0.5em;"
                >
                  /
                </span>
                <a
                  href="/tree/main/a"
                >
                  a
                </a>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card"
            >
              <div
                class="list-group list-group-flush"
              >
                <div
                  class="list-group-item"
                >
                  <a
                    href="/tree/main/a/b"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                      />
                    </svg>
                    b
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
